What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

November 15, 2010
* [antonin] minor changes in header inclusions
* [antonin] complete rewrite of opj_convert.c with correct values (from winfried)

November 11, 2010
- [antonin] removed call to dirent.h in jp3d;

October 28, 2010
* [ben.boeckel] Set the soname and soversion on the jpwl library with CMake
+ [ben.boeckel] Install jpwl binaries with CMake

October 26, 2010
* [ben.boeckel] Install symlinks to versioned directory headers when using CMake
+ [ben.boeckel] Set the library version on jp3d when using CMake

October 25, 2010
* [ben.boeckel] Fix jp3d version

October 24, 2010
* [antonin] Fixed doxygen data inside source code (from winfried)

October 22, 2010
* [ben.boeckel] Don't install jp3d and libopenjpeg headers to the same place

October 22, 2010
* [ben.boeckel] Install man pages when using CMake

October 22, 2010
! [ben.boeckel] Default to building shared libraries

October 22, 2010
* [antonin] Patch to support the MSVC Win 64 builds (from szekerest)

October 22, 2010
* [antonin] Currently the Visual Studio builds are broken in the SVN. Attached a patch to fix this issue (from szekerest)

October 22, 2010
* [szukw000] replaced 'cp -d' with 'cp -P' for MacOSX

October 22, 2010
* [szukw000] 'jpwl/Makefile.am': added CFLAGS for bin_PROGRAMS

October 22, 2010
+ [szukw000] added 'libopenjpeg.pc.in'
! [szukw000] changed 'configure.ac' to create 'libopenjpeg.pc'
! [szukw000] changed 'Makefile.am' to [un]install 'libopenjpeg.pc'
! [szukw000] changed 'doc/Makefile.am' : 'uninstall-hook' added

October 20, 2010 
* [antonin] fixed help display (patch from winfried)

October 20, 2010 
* [antonin] 
    fixed paths to png and tiff in CMakeLists.txt (patch from winfried)
    fixed link to lcms library (patch from winfried)

October 18, 2010 
* [antonin] fixed options and help display (patch from winfried) 

October 18, 2010
! [szukw000]
	doc/Makefile.am 
	doc/Makefile.nix
	jp3d/Makefile.nix